--- a/analyses/thq/analysis-casa.ipynb
+++ b/analyses/thq/analysis-casa.ipynb
@@ -335,12 +335,14 @@
     "                      (muons.miniPFRelIso_all < 0.4) &\n",
     "                      (muons.looseId) &\n",
     "                      (muons.pt > 5)]\n",
+    "        output['cutflow']['loose muons'] += ak.sum(ak.num(loose_muons))\n",
     "        \n",
     "        # Tight is loose with additional cuts; build tight array and add cuts.\n",
     "        tight_muons = loose_muons[(loose_muons.pt > 15) &\n",
     "                                  (loose_muons.tightCharge > 0) &\n",
     "                                  (loose_muons.mediumId) &\n",
     "                                  (loose_muons.mvaTTH > 0.9)]\n",
+    "        output['cutflow']['tight muons'] += ak.sum(ak.num(tight_muons))\n",
     "        \n",
     "        # This ends up getting referenced a lot. Let's not generate it every time!\n",
     "        abs_eta = np.abs(electrons.eta)\n",
@@ -353,6 +355,7 @@
     "                              (electrons.miniPFRelIso_all < 0.4) &\n",
     "                              (electrons.pt > 7) &\n",
     "                              (((electrons.mvaFall17V2noIso > 0) & (abs_eta < 1.479)) | ((electrons.mvaFall17V2noIso > 0.7) & (abs_eta > 1.479) & (abs_eta < 2.5)))]\n",
+    "        output['cutflow']['loose electrons'] += ak.sum(ak.num(loose_electrons))\n",
     "            \n",
     "        # Now we build tight from loose, adding in tight's extra cuts.\n",
     "        # Redefine abs_eta since we're now using loose.\n",
@@ -372,9 +375,11 @@
     "                                         # Two ranges for 1/E - 1/p\n",
     "                                         (((abs_eta < 1.479) & (loose_electrons.eInvMinusPInv < 0.01) & (loose_electrons.eInvMinusPInv > -0.05)) |\n",
     "                                         ((abs_eta < 2.5) & (abs_eta > 1.479) & (loose_electrons.eInvMinusPInv < 0.005) & (loose_electrons.eInvMinusPInv > -0.05)))]        \n",
+    "        output['cutflow']['tight electrons'] += ak.sum(ak.num(tight_electrons))\n",
     "        \n",
     "        # Don't want any jets below 25 pT.\n",
     "        jets = jets[(jets.pt > 25)]\n",
+    "        output['cutflow']['jets > 25'] += ak.sum(ak.num(jets))\n",
     "        \n",
     "        # Add flavor to keep track of muons/electrons in the event selection.\n",
     "        loose_muons = ak.with_field(loose_muons, 0, 'flavor')\n",
@@ -423,6 +428,11 @@
     "            jets_2mu = jets[dilepton_eventMask & (ak.num(tight_muons) == 2)]\n",
     "            jets_2e = jets[dilepton_eventMask & (ak.num(tight_electrons) == 2)]\n",
     "            jets_emu = jets[dilepton_eventMask & (ak.num(tight_muons) == 1) & (ak.num(tight_electrons) == 1)]\n",
+    "            output['cutflow']['tight_ll'] += ak.sum(ak.num(tight_ll))\n",
+    "            output['cutflow']['tights_2mu'] += ak.sum(ak.num(tights_2mu))\n",
+    "            output['cutflow']['tights_2e'] += ak.sum(ak.num(tights_2e))\n",
+    "            output['cutflow']['tights_emu'] += ak.sum(ak.num(tights_emu))\n",
+    "            output['cutflow']['jets through dilepton mask'] += ak.sum(ak.num(jets[dilepton_eventMask]))\n",
     "        \n",
     "        # Trilepton selection.\n",
     "        tight_triples = ak.argcombinations(tight_leptons, 3, fields=['i0', 'i1', 'i2'])\n",
@@ -451,6 +461,8 @@
     "            # Final trilepton channel\n",
     "            tight_lll = tight_leptons[trilepton_eventMask]\n",
     "            jets_3lep = jets[trilepton_eventMask]\n",
+    "            output['cutflow']['tight_lll'] += ak.sum(ak.num(tight_lll))\n",
+    "            output['cutflow']['jets through trilepton mask'] += ak.sum(ak.num(jets_3lep))\n",
     "        \n",
     "        \n",
     "        # # # # # #\n",
@@ -653,10 +665,10 @@
      "text": [
       "{'tHq': 3495799, 'tHW': 1499200, 'ttW': 5280565, 'ttWJets': 6700440, 'ttZ': 13764447, 'ttZJets': 10882500, 'ttH': 10039070, 'WZ': 19993200, 'ZZ': 6669988, 'ZZZ': 249237, 'WWZ': 250000, 'WZZ': 246800, 'tttt': 250000, 'WpWp': 149681, 'WGToLNuG': 6103817, 'ZGTo2LG': 14372682, 'TGJets': 1690472, 'TTGJets': 14748853}\n",
       "116386751\n",
-      "Dask client: <Client: 'tls://192.168.106.44:8786' processes=3 threads=12, memory=17.44 GiB>\n",
-      "Total time: 530\n",
-      "Events / s / thread: 3,775\n",
-      "Events / s: 219,754\n"
+      "Dask client: <Client: 'tls://192.168.42.152:8786' processes=12 threads=48, memory=68.94 GiB>\n",
+      "Total time: 557\n",
+      "Events / s / thread: 3,912\n",
+      "Events / s: 208,873\n"
      ]
     }
    ],
@@ -723,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb16cd65d60>"
+       "<matplotlib.legend.Legend at 0x7f602f613eb0>"
       ]
      },
      "execution_count": 6,
@@ -920,7 +932,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb1645bbc40>"
+       "<matplotlib.legend.Legend at 0x7f6026e8fd60>"
       ]
      },
      "execution_count": 7,
@@ -1117,7 +1129,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb16cf53f70>"
+       "<matplotlib.legend.Legend at 0x7f6026c4e430>"
       ]
      },
      "execution_count": 8,
@@ -1314,7 +1326,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb16cf36190>"
+       "<matplotlib.legend.Legend at 0x7f602f2b6520>"
       ]
      },
      "execution_count": 9,
@@ -1505,7 +1517,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all events 116386751\n"
+      "all events 116386751\n",
+      "loose muons 49646480\n",
+      "tight muons 32902388\n",
+      "loose electrons 44647259\n",
+      "tight electrons 11280116\n",
+      "jets > 25 556862762\n",
+      "tight_ll 895032\n",
+      "tights_2mu 424230\n",
+      "tights_2e 77476\n",
+      "tights_emu 393326\n",
+      "jets through dilepton mask 3117476\n",
+      "tight_lll 250554\n",
+      "jets through trilepton mask 590194\n"
      ]
     }
    ],
@@ -1538,7 +1562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
