removing hcc-stash

--- a/analyses/thq/analysis_tutorial.ipynb
+++ b/analyses/thq/analysis_tutorial.ipynb
@@ -50,7 +50,7 @@
     "from coffea.nanoevents import NanoEventsFactory, NanoAODSchema\n",
     "import time\n",
     "\n",
-    "file = 'root://hcc-stash.unl.edu:1094//osgconnect/public/dweitzel/coffea-casa/38E83594-51BD-7D46-B96D-620DD60078A7.root'\n",
+    "file = 'root://xcache//store/mc/RunIISummer16NanoAODv5/THQ_Hincl_13TeV-madgraph-pythia8_TuneCUETP8M1/NANOAODSIM/PUMoriond17_Nano1June2019_102X_mcRun2_asymptotic_v7-v1/100000/38E83594-51BD-7D46-B96D-620DD60078A7.root'\n",
     "events = NanoEventsFactory.from_root(file, entry_stop=100000).events()"
    ]
   },
@@ -839,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
