--- a/examples/example8.ipynb
+++ b/examples/example8.ipynb
@@ -49,21 +49,27 @@
     "        output = self.accumulator.identity()\n",
     "        \n",
     "        dataset = events.metadata[\"dataset\"]\n",
-    "\n",
+    "        \n",
     "        # Keep track of muons and electrons by tagging them 0/1.\n",
     "        muons = ak.with_field(events.Muon, 0, 'flavor')\n",
     "        electrons = ak.with_field(events.Electron, 1, 'flavor')\n",
     "        MET = events.MET\n",
     "        \n",
+    "        output['cutflow']['all events'] += ak.size(events.MET, axis=0)\n",
+    "        \n",
     "        # A few reasonable muon and electron selection cuts\n",
     "        muons = muons[(muons.pt > 10) & (np.abs(muons.eta) < 2.4)]\n",
     "        electrons = electrons[(electrons.pt > 10) & (np.abs(electrons.eta) < 2.5)]\n",
+    "        \n",
+    "        output['cutflow']['all muons'] += ak.sum(ak.count(muons, axis=1))\n",
+    "        output['cutflow']['all electrons'] += ak.sum(ak.count(electrons, axis=1))\n",
     "\n",
     "        # Stack muons and electrons into a single array.\n",
     "        leptons = ak.with_name(ak.concatenate([muons, electrons], axis=1), 'PtEtaPhiMCandidate')\n",
     "        \n",
     "        # Filter out events with less than 3 leptons.\n",
     "        trileptons = leptons[ak.num(leptons, axis=1) >= 3]\n",
+    "        output['cutflow']['trileptons'] += ak.sum(ak.num(trileptons, axis=1))\n",
     "        \n",
     "        # Generate the indices of every pair; indices because we'll be removing these elements later.\n",
     "        lepton_pairs = ak.argcombinations(trileptons, 2, fields=['i0', 'i1'])\n",
@@ -85,6 +91,7 @@
     "        \n",
     "        # Find the highest-pt lepton out of the ones that remain.\n",
     "        leading_lepton = trileptons_no_pair[ak.argmax(trileptons_no_pair.pt, axis=1)]\n",
+    "        output['cutflow']['number of final leading leptons'] += ak.sum(ak.num(trileptons_no_pair, axis=1))\n",
     "        \n",
     "        # Cross MET with the leading lepton.\n",
     "        met_plus_lep = ak.cartesian({'i0': MET, 'i1': leading_lepton})\n",
@@ -110,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed |  2min 54.1s\r"
+      "[########################################] | 100% Completed |  6min 59.8s\r"
      ]
     }
    ],
@@ -166,7 +173,19 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all events 53446198\n",
+      "all muons 991421725\n",
+      "all electrons 87391040\n",
+      "trileptons 5043516\n",
+      "number of final leading leptons 1227754\n"
+     ]
+    }
+   ],
    "source": [
     "for key, value in output['cutflow'].items():\n",
     "    print(key, value)"
@@ -189,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
