Configured notebook for coffea-casa

--- a/analyses/HZZ/CoffeaHZZAnalysis.ipynb
+++ b/analyses/HZZ/CoffeaHZZAnalysis.ipynb
@@ -234,15 +234,13 @@
     "import time\n",
     "\n",
     "# Use this when running locally or on Binder\n",
-    "client = Client()\n",
+    "#client = Client()\n",
     "\n",
     "# Use this when running on coffea-casa\n",
-    "'''\n",
     "client = Client(\"tls://localhost:8786\")\n",
     "import zipfile\n",
     "zipfile.ZipFile(\"infofile.zip\", \"w\").write(\"infofile.py\")\n",
     "client.upload_file(\"infofile.zip\")\n",
-    "'''\n",
     "\n",
     "start_time = time.time()\n",
     "output = processor.run_uproot_job(fileset,\n",
