--- a/examples/example4.ipynb
+++ b/examples/example4.ipynb
@@ -17,7 +17,8 @@
     "%matplotlib inline\n",
     "from coffea import hist\n",
     "import coffea.processor as processor\n",
-    "import awkward as ak"
+    "import awkward as ak\n",
+    "from coffea.nanoevents import schemas"
    ]
   },
   {
@@ -68,6 +69,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask.distributed import Client\n",
+    "\n",
+    "client = Client(\"tls://localhost:8786\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -80,19 +92,18 @@
     }
    ],
    "source": [
-    "from dask.distributed import Client\n",
-    "import time\n",
-    "\n",
-    "client = Client(\"tls://localhost:8786\")\n",
-    "\n",
     "fileset = {'SingleMu' : [\"root://eospublic.cern.ch//eos/root-eos/benchmark/Run2012B_SingleMu.root\"]}\n",
     "\n",
-    "output = processor.run_uproot_job(fileset,\n",
-    "                                treename = 'Events',\n",
-    "                                processor_instance = Processor(),\n",
-    "                                executor = processor.dask_executor,\n",
-    "                                executor_args = {'schema': processor.NanoAODSchema, 'client': client}\n",
-    "                                )"
+    "executor = processor.DaskExecutor(client=client)\n",
+    "\n",
+    "run = processor.Runner(executor=executor,\n",
+    "                        schema=schemas.NanoAODSchema,\n",
+    "                        savemetrics=True\n",
+    "                      )\n",
+    "\n",
+    "output, metrics = run(fileset, \"Events\", processor_instance=Processor())\n",
+    "\n",
+    "metrics"
    ]
   },
   {
@@ -149,7 +160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
