--- a/analyses/thq/analysis-local.ipynb
+++ b/analyses/thq/analysis-local.ipynb
@@ -14,11 +14,10 @@
     "import awkward as ak\n",
     "import matplotlib.pyplot as plt\n",
     "import uproot\n",
-    "from uproot_methods import TLorentzVectorArray\n",
     "from coffea import hist\n",
-    "from coffea.analysis_objects import JaggedCandidateArray\n",
     "from cycler import cycler\n",
-    "import coffea.processor as processor"
+    "import coffea.processor as processor\n",
+    "from coffea.nanoevents import schemas"
    ]
   },
   {
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -599,30 +598,23 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b006b4cb1fe742cc9af6583e3025ea3b",
+       "model_id": "cafa6be7fecd45208ace9d40035f1adb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value='Preprocessing'), FloatProgress(value=0.0, max=119.0), HTML(value='')))"
+       "Preprocessing:   0%|          | 0/119 [00:00<?, ?file/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Received SIGINT, killed pending jobs.  Running jobs will continue to completion.\n",
-      "Running jobs: 9\n"
+      "/opt/conda/lib/python3.8/site-packages/coffea/processor/executor.py:242: UserWarning: Early stop: cancelled 116 jobs, will wait for 3 running jobs to complete\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -630,18 +622,18 @@
     "import time\n",
     "\n",
     "tic = time.time()\n",
-    "output = processor.run_uproot_job(fileset,\n",
-    "                                treename = 'Events',\n",
-    "                                processor_instance = SignalProcessor(),\n",
-    "                                executor = processor.futures_executor,\n",
-    "                                executor_args = {'schema': processor.NanoAODSchema, 'savemetrics': True}\n",
-    "                                )\n",
+    "executor = processor.FuturesExecutor()\n",
+    "run = processor.Runner(executor=executor,\n",
+    "                        schema=schemas.NanoAODSchema,\n",
+    "                        savemetrics=True\n",
+    "                      )\n",
+    "output, metrics = run(fileset, \"Events\", processor_instance=SignalProcessor())\n",
+    "    \n",
     "toc = time.time()\n",
     "\n",
-    "print(\"Dask client:\", client)\n",
     "print(\"Total time: %.0f\" % (toc - tic))\n",
-    "print(\"Events / s / thread: {:,.0f}\".format(output[1]['entries'].value / output[1]['processtime'].value))\n",
-    "print(\"Events / s: {:,.0f}\".format(output[1]['entries'].value / (toc - tic)))"
+    "print(\"Events / s / thread: {:,.0f}\".format(metrics['entries'] / metrics['processtime']))\n",
+    "print(\"Events / s: {:,.0f}\".format(metrics['entries'] / (toc - tic)))"
    ]
   },
   {
@@ -922,7 +914,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -936,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
