updated fill_none axis

--- a/examples/example8.ipynb
+++ b/examples/example8.ipynb
@@ -82,7 +82,7 @@
     "        closest_pairs = SFOS_pairs[ak.local_index(SFOS_pairs) == ak.argmin(np.abs((trileptons[SFOS_pairs['i0']] + trileptons[SFOS_pairs['i1']]).mass - 91.2), axis=1)]\n",
     "        \n",
     "        # Make trileptons and closest_pairs have same shape. First, fill nones with empty arrays. Then filter out events that don't meet the pair requirement.\n",
-    "        closest_pairs = ak.fill_none(closest_pairs, [])\n",
+    "        closest_pairs = ak.fill_none(closest_pairs, [], axis=0)\n",
     "        closest_pairs = closest_pairs[ak.num(closest_pairs) > 0]\n",
     "        trileptons = trileptons[ak.num(closest_pairs) > 0]\n",
     "        MET = MET[ak.num(closest_pairs) > 0]\n",
@@ -113,7 +113,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: /opt/conda/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
+      "Requirement already satisfied: awkward==1.7.0 in /opt/conda/lib/python3.8/site-packages (1.7.0)\n",
+      "Requirement already satisfied: numpy>=1.13.1 in /opt/conda/lib/python3.8/site-packages (from awkward==1.7.0) (1.21.2)\n",
+      "Requirement already satisfied: setuptools in /opt/conda/lib/python3.8/site-packages (from awkward==1.7.0) (58.2.0)\n"
+     ]
+    }
+   ],
    "source": [
     "from dask.distributed import Client\n",
     "\n",
@@ -129,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed |  4min 42.6s\r"
+      "[########################################] | 100% Completed |  5min 12.4s\r"
      ]
     },
     {
@@ -176,7 +187,7 @@
        "  'nJet',\n",
        "  'nMuon'},\n",
        " 'entries': 53446198,\n",
-       " 'processtime': 8990.610299110413,\n",
+       " 'processtime': 8658.274055480957,\n",
        " 'chunks': 534}"
       ]
      },
